<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_basic_topicmsg</name>
  <version>0.2.0</version>
  <description>ros2_basic_topicmsg</description>
  <maintainer email="jetsonai@jetsonai.co.kr">R-Saem</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://jetsonai.co.kr</url>
  <url type="repository">https://github.com/jetsonai/rsaem_ros2_basic</url>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgpack</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
